# API_REST_Tarefas_-To-Do-

./: README.md  conftest.py  pyproject.toml  tasks.db
app/: main.py
app/api/v1/: routes.py
app/domain/: models.py  schemas.py
app/infra/: database.py
app/services/: task_service.py
tests/: test_tasks.py
