[project]
name = "api-rest-tarefas"
version = "0.1.0"
description = ""
authors = [
    {name = "FilipeMadeira13",email = "cfilipemadeira@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlmodel",
    "pytest",
    "httpx"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
