[tool.poetry]
name = "api-nest-tarefas"
version = "0.1.0"
description = ""
authors = ["FilipeMadeira13 <filipemadeira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
sqlmodel = "^0.0.14"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
